...
    }
    
    private func showNextQuestionOrResult() {
        if self.isLastQuestion() {
            guard let gameResult else { return }
            statisticService.store(game: gameResult)
            viewController?.show(quiz: QuizResultsViewModel(title: "Этот раунд окончен!",
                                                            text: "Ваш результат: \(gameResult.correctAnswers)/\(gameResult.totalAnswers)\n" +
                                                            "Количество сыграных квизов: \(statisticService.gamesCount)\n" +
                                                            "Рекорд: \(statisticService.bestGame.correctAnswers)/\(statisticService.bestGame.totalAnswers) (\(statisticService.bestGame.date.dateTimeString))\n" +
                                                            "Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%",
                                                            buttonText: "Сыграть ещё раз"))
        } else {
...
